fixed roll scrollbars

--- a/src/overlay/Roll.css
+++ b/src/overlay/Roll.css
@@ -9,3 +9,12 @@
     opacity: 1;
     transition: opacity ease-out 3s;
 }
+
+.roll canvas {
+    position: absolute;
+
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
